<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BCBABA"
    tools:context=".HomeActivity" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="LaFourchette"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                android:background="@color/white"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="290dp"
            android:background="@drawable/login_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/ahBtnScaner"
            android:layout_marginTop="90dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toTopOf="@+id/view"
            app:layout_constraintVertical_bias="0.647"
            app:drawableBottomCompat="@drawable/ic_baseline_qr_code_scanner_24"
            android:clickable="true"
            android:focusable="true"
            />


        <View
            android:id="@+id/view1"
            android:layout_width="300dp"
            android:layout_height="180dp"
            android:layout_marginStart="90dp"
            android:layout_marginTop="400dp"
            android:background="@drawable/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/ahTextViewRepas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="200dp"
            android:layout_marginTop="410dp"
            android:text="@string/repas"

            android:textColor="@color/colorPrimary"
            android:textSize="25sp">

        </TextView>
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/ahTextViewDate"
           android:layout_marginTop="450dp"
           android:layout_marginStart="170dp"
           android:textSize="20sp"
           android:text="@string/date_23_12_2022">

       </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="480dp"
            android:layout_marginStart="170dp"
            android:textSize="20sp"
            android:text="@string/nombre_de_tickets">

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="520dp"
            android:layout_marginStart="210dp"
            android:textSize="40sp"
            android:textColor="@color/colorPrimary"
            android:text="@string/_24"
            android:id="@+id/ahTextViewNbrTickets"
            >

        </TextView>

    </RelativeLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/my_navigation_items"
        android:visibility="visible"/>


</androidx.drawerlayout.widget.DrawerLayout>